# simple-meltano-service

./: .gitignore  README.md  pyproject.toml
simple_meltano_service/: __init__.py
tests/: test_run.py
